# potassium_pipeline

./: .dockerignore  .gitignore  .mcp.json  ADAPTIVE_UNCERTAINTY_FINAL.md  ADDITIONAL_K_LINES_ADDED.md  AUTOGLUON_WEIGHTS_ANALYSIS.md  CLAUDE.md  CONCENTRATION_RANGE_RECOMMENDATIONS.md  DATA_ANALYSIS_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.optimized  ENVIRONMENT_CONFIG.md  FEATURE_CACHE_BUG_ANALYSIS.md  FEATURE_CACHE_BUG_FIX.md  FEATURE_NAMES_FIX_SUMMARY.md  FEATURE_NAMES_IMPLEMENTATION.md  FEATURE_SELECTION_RECOMMENDATION.md  MIGRATION_NOTES.md  MN_REGION_FIX.md  NEW_DATA_FINAL_REPORT.md  OBJECTIVE_FUNCTIONS_DOCUMENTATION.md  PARALLEL_DATA_IMPLEMENTATION_SUMMARY.md  PHYSICS_FEATURES_FIX_SUMMARY.md  PHYSICS_FEATURES_QUICK_REFERENCE.md  PHYSICS_INFORMED_FEATURES_IMPLEMENTATION.md  PREPROCESSING_CONFIG_INTEGRATION.md  PREPROCESSING_FIX_SHORT_SPECTRA.md  PREPROCESSING_IMPLEMENTATION_SUMMARY.md  PREPROCESSING_QUICK_START.txt  PREPROCESSING_UPDATE_SUMMARY.md  RANGE_RECOMMENDATIONS_CORRECTED.md  README_PREDICTOR_TESTS.md  README_TABPFN_DOWNLOAD.md  README_custom_range_analysis.md  REDUCE_UNCERTAINTY_GUIDE.md  SHAP_ANALYSIS_GUIDE.md  SHAP_FEATURE_IMPORTANCE_GUIDE.md  SHAP_FEATURE_SELECTION_GUIDE.md  SHAP_IMPROVEMENTS_SUMMARY.md  (+155 more)
autogluon_experiment_configs/: best_quality_mg_focused_weights_improved_no_reduction_simple_only_ag_20250902_174749_437307_13210.yaml  best_quality_mg_focused_weights_improved_no_reduction_simple_only_ag_20250902_174833_439897_10933.yaml  best_quality_stacked_mg_comprehensive_weights_improved_no_reduction_simple_only_ag_20250902_183627_491813_87969.yaml  best_quality_stacked_mg_comprehensive_weights_improved_pls_conservative_simple_only_ag_20250902_183711_491813_31288.yaml  best_quality_stacked_mg_comprehensive_weights_improved_pls_optimal_simple_only_ag_20250902_183754_491813_74960.yaml  (+29 more)
autogluon_experiment_results/: autogluon_tracker.csv
config/: cloud_config.yml  (+2 more)
(+53 files in other folders)
